--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quick-test-example",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "test": "jest",
